# Sims5

./: .flake8  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0b44010a0517_test1.py  1048494e62cb_init.py  4786ee9c3974_partner_upd.py  5cd8bd877934_test2.py  6c9e2790f15b_test1.py  99b4381e400d_start.py  b2bd5436658f_start.py  b9006fa1d79f_partner.py  cf38e5cbadec_partner_upd3.py  f4ba2718aa1c_partner_upd.py  fccf943ad443_.py
src/: StatPlots.py  database.py
src/Client/: BotMethods.py  GameMethods.py  Keyboards.py  main.py
src/HumanDAO/: HumanDAO.py
src/Models/: HumanModel.py
